--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Highlight JavaScript syntax & semantics with Tern",
   "main": "highlight.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/all.js"
   },
   "repository": {
     "type": "git",
